Bug 1727815 Toggle internal fullscreen even if window widget fullscreen not achieved r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D123830